# WaterCellarAutomaton

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
assets/grids/: grid.mod1
assets/shaders/: surface.frag  surface.vert  triangle.frag  triangle.fragg  triangle.vert  water.frag  water.vert
gl_builder/: Cargo.toml  build.rs
gl_builder/src/: lib.rs
gl_render/: Cargo.toml
gl_render/src/: buffer.rs  color_buffer.rs  data.rs  lib.rs  shader.rs  uniform.rs
lib_gl/gl/: Cargo.toml  build.rs
lib_gl/gl/src/: lib.rs
render_gl_derive/: Cargo.toml
render_gl_derive/src/: lib.rs
resources/: Cargo.toml
resources/src/: lib.rs  resources.rs
shaders/: surface.vert  triangle.frag  triangle.vert
src/: camera.rs  debug.rs  initialization.rs  main.rs  render_gl.rs  resources.rs  surface.rs  triangle.frag  triangle.rs  types.rs
src/game_data/: controls.rs  grid.rs  mod.rs  surface.rs  water.rs
src/game_data/water/: particle_shape.rs  vertex.rs
src/render_gl/: data.rs  mod.rs  shader.rs  viewport.rs
