[package]
name = "mod1"
version = "0.1.0"
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.34.5", features = ["bundled", "static-link"] }
failure = "0.1"
nalgebra = "0.29"
gl_builder = { path = "gl_builder" }
gl_render = { path = "gl_render" }
render_gl_derive = { path = "render_gl_derive" }
resources = { path = "resources" }

[features]
gl_debug = ["gl_builder/debug"]

[build-dependencies]
walkdir = "2.3.2"