[package]
name = "mod1"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[target.'cfg(not(target_os = "macos"))'.dependencies]
sdl2 = { version = "0.34", features = ["bundled", "static-link"] }

[dependencies]
failure = "0.1"
nalgebra = "0.29"
gl_builder = { path = "gl_builder" }
gl_render = { path = "gl_render" }
render_gl_derive = { path = "render_gl_derive" }
resources = { path = "resources" }
rand = "0.8"
chrono = "0.4"

[features]
gl_debug = ["gl_builder/debug"]

[build-dependencies]
walkdir = "2.3.2"
